Update css file

--- a/seantis/dir/events/css/teamraum/directory.css
+++ b/seantis/dir/events/css/teamraum/directory.css
@@ -435,15 +435,15 @@ input.ricancelbutton {
 
 
 /* wizard */
-form.seantis-form-navigation ul.wizardSteps {
+#content form.seantis-form-navigation ul.wizardSteps {
     padding-bottom: 1em;
 }
-form.seantis-form-navigation ul.wizardSteps li:before {
+#content form.seantis-form-navigation ul.wizardSteps li:before {
     content : '';
 }
-form.seantis-form-navigation ul.wizardSteps li a:before {
+#content form.seantis-form-navigation ul.wizardSteps li a:before {
     content : '〉';
 }
-form.seantis-form-navigation ul.wizardSteps li:first-child a:before {
+#content form.seantis-form-navigation ul.wizardSteps li:first-child a:before {
     content : '';
 }
