Show organizer and ticket / registration website on detail view. Implements #41.

--- a/seantis/dir/events/css/izug/directory.css
+++ b/seantis/dir/events/css/izug/directory.css
@@ -795,6 +795,10 @@ div.riform input[type="checkbox"] {
 
 .event-view .event-details a {
     color: #00538C;
+    display: inline-block;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .event-view .event-details a.selected,
