Don't show locality address in list view. Updates #40

--- a/seantis/dir/events/css/sunburst/directory.css
+++ b/seantis/dir/events/css/sunburst/directory.css
@@ -144,6 +144,10 @@
     font-size: 12px;
 }
 
+.event-text .locality {
+    font-weight: bold;
+}
+
 .event-image {
     float: right;
     margin: 7px 50px;
