--- a/seantis/dir/events/css/teamraum/directory.css
+++ b/seantis/dir/events/css/teamraum/directory.css
@@ -145,6 +145,10 @@
     font-size: 1.4em !important;   
 }
 
+.event-text .locality {
+    font-weight: bold;
+}
+
 .event-text {
     color: #333;
     font-size: 12px;
