--- a/seantis/dir/events/css/izug/directory.css
+++ b/seantis/dir/events/css/izug/directory.css
@@ -579,6 +579,10 @@ form.change-event {
     font-size: 12px;
 }
 
+#directoryResultList .event-text .locality {
+    font-weight: bold;
+}
+
 #directoryResultList .timerange {
     font-size: 11px;
     color: black;
