Do not wrap links with ellipsis

--- a/seantis/dir/events/css/izug/directory.css
+++ b/seantis/dir/events/css/izug/directory.css
@@ -803,6 +803,7 @@ div.riform input[type="checkbox"] {
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .event-view .event-details a.selected,
